Add Server Run Dev Config to Gradle